--- a/src/components/LoadingDots/LoadingDots.module.css
+++ b/src/components/LoadingDots/LoadingDots.module.css
@@ -1,7 +1,7 @@
 .loading {
 	display: flex;
 	transition: opacity 0.3s ease-in;
-	width: 100%;
+
 	margin: 1rem;
 	padding: 1rem;
 	justify-content: center;
